problem with encoding in post methods is solved

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 #DB properties:
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/db_discographies
+jdbc.url=jdbc:mysql://localhost:3306/db_discographies?characterEncoding=UTF-8
 connection.username=root
 connection.password=root
 
